--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Lekton:400,700|Vollkorn:400,700i" rel="stylesheet">
   
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
