--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lekton:400,700|Vollkorn:400,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lekton:400,700|Eczar:400,700" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122655638-1"></script>
     <script>
